switched to sendmail
git-svn-id: https://f0rked.com/svn/dotfiles@18 d1735b7b-f024-0410-8a63-b5baf8adcfab

--- a/.muttngrc
+++ b/.muttngrc
@@ -24,7 +24,8 @@ set status_format = ">> Mutt: (%r) mb(%b) %f: new(%n)/total(%m) [%l]     del(%d)
 set hostname = "f0rked.com"
 set realname = "Matt Sparks"
 set signature = ~/.signature
-set sendmail="/usr/bin/nbsmtp -s -D -h f0rked.com"
+#set sendmail="/usr/bin/nbsmtp -s -D -h f0rked.com"
+set sendmail="/usr/sbin/sendmail"
 alternates (.*@f0rked.com|.*@friedhosting.com|.*@frkd.com|f0rked@nullirc.net|jsparks2@uiuc.edu)
 
 set use_from = no
