added emacs stuff for mail-mode in muttng
git-svn-id: https://f0rked.com/svn/dotfiles@23 d1735b7b-f024-0410-8a63-b5baf8adcfab

--- a/.muttngrc
+++ b/.muttngrc
@@ -96,7 +96,7 @@ set print_command="muttprint"
 set sort = reverse-date
 set ispell = aspell
 set sleep_time = 0
-set editor = "emacs"
+set editor = "emacs -nw --load ~/.emacs-mail +8:0"
 set timeout = 10
 set pager_index_lines = 5
 set sendmail_wait = -1     # wait in background
