--- a/.screenrc
+++ b/.screenrc
@@ -3,8 +3,15 @@
 # $Date$
 
 defutf8 on
-#defbce on
 defnonblock on
+
+# terminfo and termcap for nice 256 color terminal
+# allow bold colors - necessary for some reason
+attrcolor b ".I" 
+# tell screen how to set colors. AB = background, AF=foreground 
+termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm' 
+# erase background with current bg color 
+defbce "on"
 
 # change the hardstatus settings to give an window list at the bottom of the                              
 # screen, with the time and date and with the current window highlighted                           
@@ -16,6 +23,4 @@ hardstatus alwayslastline
 hardstatus string '%{= G}%-Lw%{= W}%50>%n%f* %t%{= G}%+Lw%< %{= G}%-=[%D %d %M %c:%s%{-}] [%{G}%H/%l]'
 
 #termcapinfo xterm*|rxvt hs:ts=\E]2;:fs=^G:ds=\E]2;TITLEDISABLED^G
-
-term rxvt
 
