--- a/.muttrc
+++ b/.muttrc
@@ -37,7 +37,7 @@ source ~/.muttrc.nntp
 set date_format = "%Y-%m-%d %H:%M %Z"
 set index_format = "%4C %Z %-19.16D %-25.25n %?M?(%M) ?%s"
 set folder_format = "%2C %t %N %F %2l %-8.8u %-8.8g %8s %d %f"
-set status_format = ">> Mutt: (%r) mb(%b) %f: new(%n)/flagged(%F)%?p?/draft(%p)?/total(%m) %?V?(limit: %V)? %> (%P)"
+set status_format = ">> Mutt: (%r) mb(%b) %f: n(%n)/f(%F)%?p?/d(%p)?/total(%m) %?V?(limit (%M): %V)? %> (%P)"
 set attach_format = "%u%D%I %t%4n %T%.40d%> [%.7m/%.10M, %.6e%?C?, %C?, %s]"
 set attribution = "On %d, %f wrote:"
 
