--- a/.screenrc
+++ b/.screenrc
@@ -1,26 +1,23 @@
 # ~/.screenrc
-# Matt Sparks (f0rked)
-# $Date$
+# Matt Sparks
 
 defutf8 on
 defnonblock on
 
 # terminfo and termcap for nice 256 color terminal
 # allow bold colors - necessary for some reason
-attrcolor b ".I" 
-# tell screen how to set colors. AB = background, AF=foreground 
-termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm' 
-# erase background with current bg color 
+attrcolor b ".I"
+# tell screen how to set colors. AB = background, AF=foreground
+termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
+# erase background with current bg color
 defbce "on"
 
-# change the hardstatus settings to give an window list at the bottom of the                              
-# screen, with the time and date and with the current window highlighted                           
-hardstatus alwayslastline                                                                                           
-
+# change the hardstatus settings to give an window list at the bottom of the
+# screen, with the time and date and with the current window highlighted
+hardstatus alwayslastline
 # from tomaw@FreeNode
-# "%{gk}[%{B} %d/%m%{W}%c:%s %{g}][%= %{wk}%?%-Lw%?%{r}(%{W}%n*%f 
+# "%{gk}[%{B} %d/%m%{W}%c:%s %{g}][%= %{wk}%?%-Lw%?%{r}(%{W}%n*%f
 #     %t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][ %{G}%H/%l %{g}]"
-hardstatus string '%{= G}%-Lw%{= W}%50>%n%f* %t%{= G}%+Lw%< %{= G}%-=[%D %d %M %c:%s%{-}] [%{G}%H/%l]'
+hardstatus string '%{= G}%-Lw%{= W}%50>%n%f* %t%{= G}%+Lw%< [%{G}%H/%l]'
 
-#termcapinfo xterm*|rxvt hs:ts=\E]2;:fs=^G:ds=\E]2;TITLEDISABLED^G
-
+#termcapinfo xterm*|rxvt hs:ts=\E]2;:fs=^G:ds=\E]2;TITLEDISABLED^
