--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,8 @@
 Host *.uiuc.edu
   User jsparks2
 Host kitt.vm.quadpoint.org kitt.vm
-  User root
+  User ms
+
+Host *
+  GSSAPIAuthentication yes
+  GSSAPIDelegateCredentials yes
