conforming to debian mutt-patched

--- a/.muttrc
+++ b/.muttrc
@@ -12,7 +12,7 @@ set copy = yes             # Save copies of outgoing mail?
 
 # NNTP stuff
 # This file contains nntp_* settings for newsgroups
-source ~/.muttrc.nntp
+#source ~/.muttrc.nntp
 
 #source ~/.muttrc.local
 source ~/.muttrc.imap
@@ -104,7 +104,6 @@ set editor = "vim -c 'set tw=72 et' '+/^$'"  # [customize]
 set sort = threads                     # default sort messages by thread
 set sort_browser = reverse-date        # showing mbox list default to newest first
 set sort_aux = reverse-last-date-sent  # showing threads with youngest message last
-set collapse_flagged = no
 set collapse_unread = no
 
 set include = yes
