user config for ssh

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,9 @@
 Host *.uiuc.edu
   User jsparks2
-Host kitt.vm.quadpoint.org kitt.vm
+Host *.vm *.vm.quadpoint.org
   User ms
+Host *.stanford.edu
+  User msparks
 
 Host *
   GSSAPIAuthentication yes
