Set term to screen-256color in .screenrc

--- a/.screenrc
+++ b/.screenrc
@@ -19,3 +19,6 @@ termcapinfo xterm ti@:te@
 
 hardstatus alwayslastline
 hardstatus string '%{= m}%0c   %{= G}%-Lw%{r}(%{W}%50>%n%f %t%{= r})%{= G}%+Lw%<%-=   %?+%{m}%u %?%{C}%H%{-} %{w}%l%{-}'
+
+# Change $TERM value to indicate we have 256 color support in screen.
+term screen-256color
