--- a/.screenrc
+++ b/.screenrc
@@ -14,8 +14,8 @@ defbce on
 termcapinfo xterm ti@:te@
 
 # terminfo and termcap for nice 256 color terminal
-# allow bold colors - necessary for some reason
-#attrcolor b ".I"
+# allow bold colors - necessary for some reason when using xterm-256color
+attrcolor b ".I"
 
 hardstatus alwayslastline
 hardstatus string '%{= m}%0c   %{= G}%-Lw%{r}(%{W}%50>%n%f %t%{= r})%{= G}%+Lw%<%-=   %?+%{m}%u %?%{C}%H%{-} %{w}%l%{-}'
