More advanced git log aliases

--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,8 @@
   ci = commit -a
   co = checkout
   st = status
-  lg = log --name-status
+  lg = log --stat --decorate
+  lgg = log --graph --decorate --pretty=format:'%C(bold red)%h%Creset -%C(cyan)%d%Creset %s %C(cyan)(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
   praise = blame
 
 [apply]
