Move window list to center of status line in tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,6 +34,9 @@ set -g status-left "%H:%M"
 set -g status-left-fg magenta
 set -g status-left-length 12
 
+# Move window list to center of status line.
+set -g status-justify centre
+
 # Right-side status line text.
 # This Perl magic shows only the load averages from the `uptime` command.
 set -g status-right "#(perl -le '\$_ = qx|uptime|; chomp; s/^.+load averages?: //; s/,//g; print')  #[fg=cyan]#h#[default]"
@@ -44,7 +47,7 @@ set -g message-bg "#333333"
 
 # Status line colors.
 set -g status-fg white
-set -g status-bg default
+set -g status-bg "#121212"
 
 # Default window title colors and format.
 setw -g window-status-fg "#4682B4"
