Add tmux session name to status line.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,7 +39,7 @@ set -g status-justify centre
 
 # Right-side status line text.
 # This Perl magic shows only the load averages from the `uptime` command.
-set -g status-right "#(perl -le '\$_ = qx|uptime|; chomp; s/^.+load averages?: //; s/,//g; print')  #[fg=cyan]#h#[default]"
+set -g status-right "#(perl -le '\$_ = qx|uptime|; chomp; s/^.+load averages?: //; s/,//g; print')  #[fg=cyan]#h#[default]#[fg=#666666]/#[default]#[fg=#d75fff]#S#[default]"
 
 # Message line colors.
 set -g message-fg "#DDDDDD"
