Fix typo in send-prefix bind.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 # Note that this is different from screen, which uses C-a.
 set -g prefix C-q
 unbind-key C-b
-bind-key C-q send-prefix
+bind-key q send-prefix
 
 # Bind 'C-q C-q' to move to the last window, like in screen.
 bind-key C-q last-window
