--- a/.ssh/config
+++ b/.ssh/config
@@ -2,3 +2,11 @@ Host *
   GSSAPIAuthentication yes
   GSSAPIDelegateCredentials yes
   ControlPath ~/.ssh/sockets/%r@%h:%p
+
+Host shellbox.*
+  Port 2222
+  CheckHostIP no
+
+Host diffusion.*
+  Port 12222
+  CheckHostIP no
