.tmux.conf: convert to style options.
https://github.com/tmux/tmux/wiki/FAQ#how-do-i-translate--fg--bg-and--attr-options-into--style-options

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,7 +31,7 @@ set -g status-keys emacs
 
 # Left-side status line text.
 set -g status-left "%H:%M"
-set -g status-left-fg magenta
+set -g status-left-style fg=magenta
 set -g status-left-length 12
 
 # Move window list to center of status line.
@@ -42,20 +42,15 @@ set -g status-justify centre
 set -g status-right "#(perl -le '\$_ = qx|uptime|; chomp; s/^.+load averages?: //; s/,//g; print')  #[fg=cyan]#h#[default]#[fg=#666666]/#[default]#[fg=#d75fff]#S#[default]"
 
 # Message line colors.
-set -g message-fg "#DDDDDD"
-set -g message-bg "#333333"
+set -g message-style fg="#DDDDDD",bg="#333333"
 
 # Status line colors.
-set -g status-fg white
-set -g status-bg "#121212"
+set -g status-style fg=white,bg="#121212"
 
 # Default window title colors and format.
-setw -g window-status-fg "#4682B4"
-setw -g window-status-bg default
+setw -g window-status-style fg="#4682B4",bg=default
 setw -g window-status-format " #[fg=#BBBBBB]#I#[default]#[fg=#666666]|#[default]#W#[fg=#00FF00]#F#[default]"
 
 # Active window title colors and format.
-setw -g window-status-current-fg white
-setw -g window-status-current-bg default
-setw -g window-status-current-attr bright
+setw -g window-status-current-style fg=white,bg=default,bright
 setw -g window-status-current-format " #[fg=#AA0000](#[default]#[fg=#BBBBBB]#I#[default]#[fg=#00FF00]#F#[default] #W#[fg=#AA0000])#[default]"
